# Stratos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Server.cpp  Server.h  Stratos.cpp  main.cpp
src/block/: Block.cpp  Block.h  BlockState.h  Blocks.cpp  Blocks.h
src/block/state/: BlockState.cpp  BlockState.h  StateManager.cpp  StateManager.h  StateProperties.cpp  StateProperties.h  StateProperty.cpp  StateProperty.h
src/math/: Angle.h  Direction.h  Ints.h  Position.h
src/nbt/: ArrayTag.h  CompoundTag.cpp  CompoundTag.h  ListTag.cpp  ListTag.h  NBT.cpp  NBT.h  NBTValue.cpp  NBTValue.h  PrimitiveTag.h  StringTag.cpp  StringTag.h  Tag.cpp  Tag.h  Value.cpp  Value.h
src/nbt/io/: NBTBuffer.cpp  NBTBuffer.h  NBTCompression.cpp  NBTCompression.h
src/network/: Network.cpp  Network.h  NetworkClient.cpp  NetworkClient.h  Socket.cpp  Socket.h
src/network/io/: Socket.h
src/network/protocol/: Packet.cpp  Packet.h  PacketCodec.cpp  PacketCodec.h  PacketSerialization.cpp  PacketSerialization.h
src/network/protocol/codec/: PacketCodec.cpp  PacketCodec.h  PacketRegistry.cpp  PacketRegistry.h
src/network/protocol/definition/: PacketConfiguration.cpp  PacketConfiguration.h  PacketHandshake.cpp  PacketHandshake.h  PacketLogin.cpp  PacketLogin.h  PacketPlay.cpp  PacketPlay.h  PacketStatus.cpp  PacketStatus.h
src/network/protocol/handler/: PacketConfigurationHandler.cpp  PacketConfigurationHandler.h  PacketHandshakeHandler.cpp  PacketHandshakeHandler.h  PacketLoginHandler.cpp  PacketLoginHandler.h  PacketPlayHandler.cpp  PacketPlayHandler.h  PacketStatusHandler.cpp  PacketStatusHandler.h
src/network/protocol/serialization/: PacketBuffer.cpp  PacketBuffer.h  PacketSerialization.cpp  PacketSerialization.h  WorldSerialization.cpp  WorldSerialization.h
src/network/session/: NetworkClient.cpp  NetworkClient.h  SessionAuth.cpp  SessionAuth.h
src/registry/: Registries.cpp  Registries.h  Registry.cpp  Registry.h
src/utils/: Hash.h  Identifier.cpp  Identifier.h  MathUtils.h  Predicate.h  StringUtils.cpp  StringUtils.h  TimeUtils.h  Types.h  UUID.h  Validate.h
src/utils/collection/: BitSet.cpp  BitSet.h  IdList.h  Iterable.h  Palette.cpp  Palette.h  PalettedStorage.cpp  PalettedStorage.h
src/utils/config/: Config.cpp  Config.h
src/utils/crypto/: CryptoUtils.cpp  CryptoUtils.h
src/utils/hash/: MD5.cpp  MD5.h
src/utils/io/: ByteBuffer.cpp  ByteBuffer.h  CompressionUtils.cpp  CompressionUtils.h  FileUtils.cpp  FileUtils.h
src/world/: World.h
src/world/biome/: Biome.cpp  Biome.h  Biomes.cpp  Biomes.h
src/world/format/: Biome.h
src/world/format/chunk/: Chunk.cpp  Chunk.h  Heightmap.cpp  Heightmap.h  Palette.cpp  Palette.h
src/world/format/io/: Region.cpp  Region.h
test/: stratos_test.cpp
tools/code_generation/: BiomeRegistryGenerator.py  BlockRegistryGenerator.py
